# parallect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PLUGINS.md  PROVIDERS.md  QUICKSTART.md
scripts/: bump-version.sh
src/parallect/: __init__.py  __main__.py
src/parallect/api/: __init__.py
src/parallect/backends/: __init__.py  adapters.py  probe.py
src/parallect/claims/: __init__.py  extract.py
src/parallect/cli/: __init__.py  jobs.py  (+8 more)
tests/: test_api_client.py  test_backends_adapters.py  test_backends_probe.py  test_backends_resolve.py  test_claims.py  test_cli_config_local_first.py  test_cli_research.py  test_cli_research_synthesis_base_url.py  test_config.py  test_config_textual.py  test_embeddings.py  test_hash_response.py  test_integration.py  test_openai_compat.py  test_orchestrator.py  test_orchestrator_citations.py  test_plugin_sources.py  test_plugins_cli.py  test_plugins_filesystem.py  test_plugins_obsidian.py  test_plugins_prior_research.py  test_plugins_protocol.py  test_plugins_prxhub.py  test_provider_integration.py  test_providers.py  test_research_flow.py  test_research_loop.py  test_routing.py  test_settings_synthesis_embeddings.py  test_synthesis.py  test_synthesis_llm.py  test_wave2_cross_module.py  test_wave2_property.py
tests/integration/: README.md  conftest.py  docker-compose.yml  litellm.config.yaml  test_cli_e2e.py  test_e2e_smoke.py  test_litellm_backend.py  test_lmstudio_mock.py  test_plugins_filesystem_integration.py  test_research_smoke.py
(+38 files in other folders)
