[project]
name = "parallect"
version = "0.1.0"
description = "Open-source multi-provider AI deep research CLI (BYOK)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "prx-spec>=0.1.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-genai>=1.0",
]
ldr = [
    "local-deep-research>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[project.scripts]
parallect = "parallect.cli:app"

[project.entry-points."parallect.hooks"]
# Third-party plugins register hooks here via their own pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parallect"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: slow tests requiring live servers (LiteLLM, Ollama, mock LM Studio); set PARALLECT_INTEGRATION=1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.uv.sources]
prx-spec = { path = "../prx-spec", editable = true }
